Discussion section mobile display fixes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -778,6 +778,24 @@
    }
  }
 
+ .innerFormWrap {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+ }
+
+ .fileAttachmentBtn {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   text-align: center;
+   margin-left: 2rem;
+   border-radius: 25px;
+   border: 2px solid rgb(86, 129, 39);
+   padding: 1rem;
+   cursor: pointer;
+ }
+
  @media screen and (max-width: 1000px) {
    .cultureDecor {
      display: none;
@@ -787,7 +805,16 @@
      padding-left: 0;
    }
 
+   .innerFormWrap {
+     flex-direction: column;
+   }
+
+   .fileAttachmentBtn {
+     margin-left: 0;
+   }
+
  }
+
 
  .resource-button:hover {
    box-shadow: 0px 0px 15px 0px rgb(229, 124, 27) !important;
